[package]
name = "truncnorm"
version = "0.3.0"
authors = ["Eleanor Quint <eleanorquint1@gmail.com>"]
edition = "2018"
description   = "Normal and Truncated Normal distributions"
readme        = "README.md"
repository    = "https://github.com/drkwint/truncnorm-rs"
license       = "MIT"
keywords      = ["ndarray", "statistics", "mathematics", "random", "probability"]
categories    = ["algorithms", "simulation", "science"]
exclude = [
    ".github",
    "src/profile_main.rs"
]

[features]
rayon = ["ndarray/rayon"]

[dependencies]
ndarray = "^0.15.2"
ndarray-stats = "^0.5.0"
ndarray-rand = "^0.14.0"
num = "^0.4.0"
rand = "^0.8.3"
levenberg-marquardt = "^0.8.0"
nalgebra = "^0.25.3" # version required by lm package
statrs = "^0.15.0"
ndarray-linalg = "^0.14.0"

[dev-dependencies]
ndarray-rand = "^0.14.0"
proptest = "1.0.0"
proptest-derive = "0.2.0"
criterion = "0.3"
ndarray-linalg = { version = "^0.14.0", features = ["openblas-system"] }

[build-dependencies]
bindgen = "^0.58.1"
cc = "^1.0.68"

[[bench]]
name = "my_benchmark"
harness = false

# Math rendering on docs.rs
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
