[package]
name = "truncnorm"
version = "0.4.1"
authors = ["Eleanor Quint <eleanorquint1@gmail.com>"]
edition = "2021"
description   = "Normal and Truncated Normal distributions"
readme        = "README.md"
repository    = "https://github.com/drkwint/truncnorm-rs"
license       = "MIT"
keywords      = ["ndarray", "statistics", "mathematics", "random", "probability"]
categories    = ["algorithms", "simulation", "science"]
exclude = [
    ".github",
    "src/profile_main.rs"
]

[features]
rayon = ["ndarray/rayon"]
intel-mkl = ["ndarray-linalg/intel-mkl"]
openblas-system = ["ndarray/blas", "blas-src", "openblas-src", "ndarray-linalg/openblas-system"]

[dependencies]
argmin = { version = "^0.4.7", features = ["ndarrayl"] }
blas-src = { version = "0.8", features = ["openblas"], optional = true }
ndarray = "^0.15.4"
ndarray-linalg = "^0.14.1"
ndarray-rand = "^0.14.0"
ndarray-stats = "^0.5.0"
num = "^0.4.0"
openblas-src = { version = "0.10.4", features = ["cblas", "system"], optional = true }
rand = "^0.8.4"
statrs = "^0.15.0"

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.2.0"
criterion = "0.3"

[build-dependencies]
bindgen = "^0.59.2"
cc = "^1.0.72"

# Math rendering on docs.rs
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
